src/objects/WGUCourse__c.object
<CustomObject>
    <description>A course as is outlined in PAMS.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this course is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCN__c</fullName>
        <description>common course number</description>
        <label>Common course number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetencyUnits__c</fullName>
        <label>Competency Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CourseVersion__c</fullName>
        <description>Version number for the course. From PAMS courseversion</description>
        <label>CourseVersion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The division this course applies.</description>
        <label>Division</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Courses</relationshipLabel>
        <relationshipName>WGUCoursesForDivision</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LatestVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The latest version of this particular WGU Course.</description>
        <label>Latest Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>LatestVersionRelation</relationshipLabel>
        <relationshipName>LatestVersionRelation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MajorVersion__c</fullName>
        <label>Major Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinorVersion__c</fullName>
        <label>Minor Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAMSID__c</fullName>
        <externalId>true</externalId>
        <label>PAMS ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAMSVersionID__c</fullName>
        <description>This is the ID that maps into PAMS. This id also maps to course requirements that need to be accomplished in order to complete the course.</description>
        <label>PAMS Version ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The version sequence from PAMS.</description>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentFee__c</fullName>
        <label>Student Fee</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Banner subject</description>
        <label>Subject</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniversityCost__c</fullName>
        <description>The cost of this course for each student to take to the University.</description>
        <label>University Cost</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>bannercode__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>bannercode</label>
        <type>Text</type>
    </fields>
    <label>WGU Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>LatestVersion__c</columns>
        <columns>CCN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>